--- a/Diwali_Sales_Analysis jupyter.ipynb
+++ b/Diwali_Sales_Analysis jupyter.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import csv file\n",
+    "# importing csv file\n",
     "df = pd.read_csv('Diwali Sales Data.csv', encoding= 'unicode_escape')"
    ]
   },
